--- a/android-loiti-app/app/src/main/AndroidManifest.xml
+++ b/android-loiti-app/app/src/main/AndroidManifest.xml
@@ -36,11 +36,12 @@
             android:value="AIzaSyDmPkA0Z6hlc4wTyl8x_F5_6PbKrt20Go0" />
 
         <activity
-            android:name="com.facebook.LoginActivity"
+            android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@style/AppBaseTheme" >
         </activity>
+
         <activity
             android:name="hu.artklikk.android.loiti.ui.activity.MainActivity_"
             android:label="@string/app_name" >
